<resources>
    <string name="app_name">Module7App</string>

    <!---->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_fragment_a">Go To Fragment A</string>
    <string name="go_to_fragment_b">Go To Fragment B</string>
    <string name="go_to_fragment_c">Go To Fragment C</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="fragment_a">Fragment A</string>
    <string name="todoA">TODO</string>
    <string name="fragment_b">Fragment B</string>
    <string name="todoB">TODO</string>
    <string name="fragment_c">Fragment C</string>
    <string name="todoC">TODO</string>
    <string name="mainimga">mainImgA</string>
    <string name="mainimgb">mainImgB</string>
    <string name="mainimgc">mainImgC</string>
    <string name="imga">imgA</string>
    <string name="imgb">ImgB</string>
    <string name="imgc">ImgC</string>
</resources>
